# RoboGripAI

./: LICENSE  pyproject.toml
.kiro/specs/robotic-sorting-system/: design.md  requirements.md  tasks.md
robotic_sorting/: __init__.py  arm_controller.py  metrics_collector.py  models.py  object_manager.py
robotic_sorting_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py
tests/property_tests/: __init__.py
tests/unit_tests/: __init__.py  test_alternative_path.py  test_arm_controller.py  test_metrics_collector.py  test_models.py  test_object_manager.py
