[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotic-sorting-system"
version = "0.1.0"
description = "Robotic pick-and-place sorting system simulation"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
